# my_knowledge_base

./: .gitignore  AI_New_Links_ReDesignProposal.md  CLAUDE.md  KickOff.txt  README.md  ToDo.md  pyproject.toml
article-fetcher/: .gitignore  README.md  pyproject.toml
article-fetcher/article_fetcher/: cli.py  editor.py  extract.py  fetcher.py  frontmatter.py  pipeline.py  render.py
article-fetcher/docs/00-scoping/: Problem-Statement.md  Stakeholder-Map.md
article-fetcher/docs/01-requirements/: Constraints-Register.md  Requirements.md
article-fetcher/docs/02-planning/: Delivery-Plan.md  High-Level-Design.md
article-fetcher/docs/03-architecture-data/: Architecture-Overview.md  Data-Contracts.md
article-fetcher/docs/04-execution/: Change-Log.md  Implementation-Notes.md
article-fetcher/docs/05-testing/: Test-Plan.md  Traceability.md  Validation-Report.md
article-fetcher/docs/06-documentation/: Onboarding.md  System-Overview.md
article-fetcher/docs/adr/: ADR-001-standalone-architecture.md  ADR-002-trafilatura-with-playwright-fallback.md
article-fetcher/tests/: conftest.py  test_cli_flow.py  test_extract.py  test_fetcher.py  test_frontmatter.py  test_pipeline.py  test_playwright_fallback.py
article-fetcher/tests/fixtures/: good_article.html  metadata_article.html  thin_js_shell.html
article_catalog/: cli.py  core.py  index.py  models.py  storage.py
article_catalog/gui/: app.py  main_window.py
articles/: 6bb19d9d.md  96ed6e65.md
docs/00-scoping/: Problem-Statement.md  Stakeholder-Map.md
docs/01-requirements/: Constraints-Register.md  Requirements.md
docs/02-planning/: Delivery-Plan.md  High-Level-Design.md
docs/03-architecture-data/: Architecture-Overview.md  (+1 more)
tests/: test_cli.py  test_core.py  test_index.py  test_storage.py
(+7 files in other folders)
